# TurboTape

./: README.md
.agents/rules/: code-guide.md
API/: .gitignore  config.yaml  env.example  main.py  pyproject.toml  test_groq_integration.py
API/agents/initial_screening/: Initial_screening_financial.md  Screener_Scrapper.py  fallback.md  initial_prompt.md  initial_screening.md  initial_screening_agent.py  yfinance_helper.py
API/agents/ranking_agent/: ranking_agent.py  ranking_prompt.md  ranking_prompt_Sattelite.md
API/agents/stage_analysis/: Staging_prompt.md  stage_analysis_agent.py
API/agents/technical_analysis/: TechnicalAnalysisHelper.py  buy_add_sell.md  buy_add_sell.py  buy_add_sell_sat.md
API/caching/: cache_manager.py
API/llm/: llm.py
API/orchestrator/: agent_orchestrator.py
API/schemas/: schemas.py
API/util/: util.py
UI/: index.html  package-lock.json  package.json
UI/src/: App.jsx  index.css
UI/src/pages/: AnalyzePage.css  AnalyzePage.jsx  CoreAnalysisPage.css  CoreAnalysisPage.jsx
UI/src/services/: stockService.js
